--- a/index.html
+++ b/index.html
@@ -17,13 +17,10 @@
 			<div class="layout-center-wrapper">
 				<div class="header__inner">
 					<div class="header__left">
-						<p class="header__author">Курс Ирины Козловской</p>
-						<h1 class="header__title">Beauty Guide. Путеводитель в мир макияжа и ухода за кожей</h1>
-						<p class="header__slogan">Выражай свою уникальность!
-						</p>
-
+						<p class="header__author">Курс Райханы Сафиной</p>
+						<h1 class="header__title">Неинвазивная липосакция</h1>
+						<p class="header__slogan">Здоровое поколение – забота о будущем!</p>
 						<p class="header__date">{{data["event"]["date"]}}</p>
-
 						<button type="button" class="template-btn" id="headerToPaymentBtn">
 							<span>Принять участие</span>
 						</button>
@@ -50,33 +47,36 @@
 		<!-- AUDIENCE -->
 		<div class="audience">
 			<div class="layout-center-wrapper">
-				<h3 class="audience__title training-title">Для кого этот курс</h3>
+				<h3 class="audience__title training-title">Этот курс для тех, кто ХОЧЕТ</h3>
 				<ul class="audience__list">
 					<li class="audience__item">
 						<div class="audience__num"><span>1</span></div>
-						<p class="audience__text">Тинейджеры, которые хотят пробовать и экспериментировать без вреда для
-							кожи и перебора
+						<p class="audience__text">Восстановить здоровье
 						</p>
 					</li>
 					<li class="audience__item">
 						<div class="audience__num"><span>2</span></div>
-						<p class="audience__text">Молодые мамы, чтобы сохранить и приумножить свою молодость и красоту,
-							быть частью женского сообщества
+						<p class="audience__text">Снизить вес правильно
 						</p>
 					</li>
 					<li class="audience__item">
 						<div class="audience__num"><span>3</span></div>
-						<p class="audience__text">Мамы подростков, чтобы стать ближе и разбираться в трендах
+						<p class="audience__text">Восполнить ресурсное состояние
 						</p>
 					</li>
 					<li class="audience__item">
 						<div class="audience__num"><span>4</span></div>
-						<p class="audience__text">Женщины зрелого возраста, чтобы окунуться в свою вторую молодость
+						<p class="audience__text">Учиться у профессионалов
 						</p>
 					</li>
 					<li class="audience__item">
 						<div class="audience__num"><span>5</span></div>
-						<p class="audience__text">Бьютиблогеры и представители индустрии красоты
+						<p class="audience__text">Разобраться со своей семейной продуктовой корзиной
+						</p>
+					</li>
+					<li class="audience__item">
+						<div class="audience__num"><span>6</span></div>
+						<p class="audience__text">Сохранить результат на всю жизнь
 						</p>
 					</li>
 				</ul>
@@ -91,38 +91,28 @@
 					<ul class="knowledge__list">
 						<li class="knowledge__item">
 							<div class="knowledge__num"><span>1</span></div>
-							<p class="knowledge__text">Классификация косметики, их основные характеристики и
-								особенности. Разбор косметички
+							<p class="knowledge__text">Полноценно завтракать и соблюдать режим питания
 							</p>
 						</li>
 						<li class="knowledge__item">
 							<div class="knowledge__num"><span>2</span></div>
-							<p class="knowledge__text">Построение главных линий макияжа. Практические занятия по
-								дневному, деловому, лёгкому и антивозрастному макияжу</p>
+							<p class="knowledge__text">Жить без тяги к сладкому и бесполезной пище</p>
 						</li>
 						<li class="knowledge__item">
 							<div class="knowledge__num"><span>3</span></div>
-							<p class="knowledge__text">Создание ежедневных образов, опираясь на природную гамму и в
-								рамках поставленной задачи</p>
+							<p class="knowledge__text">Правильно сочетать продукты</p>
 						</li>
 						<li class="knowledge__item">
 							<div class="knowledge__num"><span>4</span></div>
-							<p class="knowledge__text">Практические занятия по созданию самых популярных и модных
-								образов. Смоки айз, Голливудский макияж, классический вечерний макияж</p>
+							<p class="knowledge__text">Удерживать вес самостоятельно</p>
 						</li>
 						<li class="knowledge__item">
 							<div class="knowledge__num"><span>5</span></div>
-							<p class="knowledge__text">Трансформация базового макияжа в вечерний и праздничный</p>
-						</li>
-						<li class="knowledge__item">
-							<div class="knowledge__num"><span>6</span></div>
-							<p class="knowledge__text">Обзор трендов в макияже, подбор косметики для его создания.
-								Разбор ошибок при выборе инструментов для макияжа</p>
+							<p class="knowledge__text">Изменению в культуре питания всей семьи</p>
 						</li>
 					</ul>
-
 					<div class="knowledge__img-wrap">
-						<img src="img/about.jpg" alt="">
+						<img src="img/about.png" alt="">
 					</div>
 				</div>
 			</div>
@@ -133,7 +123,7 @@
 			<div class="layout-center-wrapper">
 				<div class="middle-title__inner">
 					<div>
-						<h1 class="middle-title__text">Beauty Guide. Путеводитель в мир макияжа и ухода за кожей</h1>
+						<h1 class="middle-title__text">Неинвазивная липосакция</h1>
 					</div>
 
 					<button type="button" class="template-btn" id="middleToPaymentBtn">
@@ -155,7 +145,7 @@
 					</div>
 
 					<div class="video-block__right">
-						<iframe class="video-block__frame" src="https://www.youtube.com/embed/MAgr_Z2UCG0"
+						<iframe class="video-block__frame" src="video/safina_r.mp4"
 							frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"
 							allowfullscreen=""></iframe>
 					</div>
@@ -169,15 +159,17 @@
 				<h3 class="coach-block__title">Автор и руководитель курса</h3>
 				<div class="coach-block__inner">
 					<div class="coach-block__img-wrap">
-						<img src="img/author.jpg" alt="">
+						<img src="img/author.png" alt="">
 					</div>
 
 					<div class="coach-block__desc-wrap">
-						<span class="coach-block__name">Ирина Козловская</span>
-						<p class="coach-block__text">Визажист международного уровня</p>
-						<p class="coach-block__text">Автор обучающих программ по макияжу для любителей и
-							профессиональных визажистов</p>
-						<p class="coach-block__text">Более 3000 клиентов, более 150 стали профессиональными визажистами
+						<span class="coach-block__name">Райхана Сафина</span>
+						<p class="coach-block__text">Сертифицированный консультант по функциональному питанию и
+							коррекции веса</p>
+						<p class="coach-block__text">Веду марафон стройности с 2009 года</p>
+						<p class="coach-block__text">Ученица известного питерского врача-диетолога Смирновой Любови
+							Алексеевны, и все, что я провожу на курсе, подкреплено её знаниями и практикой на протяжении
+							более, чем 35 лет
 						</p>
 					</div>
 				</div>
@@ -186,7 +178,7 @@
 	</main>
 
 	<!-- FOOTER -->
-	<footer class="footer" style="background-image: url(img/footer-bg.jpg);">
+	<footer class="footer" style="background-image: url(img/header-bg.jpg);">
 		<div class="layout-center-wrapper">
 			<div class="footer__inner">
 				<div class="footer__tarif-wrap">
@@ -195,24 +187,33 @@
 					<ul class="footer__list">
 						<li class="footer__item">
 							<span class="footer__marker"></span>
-							<p class="footer__text">Основы грамотного ухода за кожей и принципов современного макияжа
+							<p class="footer__text">Мое сопровождение в течение 4-х недель
 							</p>
 						</li>
 						<li class="footer__item">
 							<span class="footer__marker"></span>
-							<p class="footer__text">Вы поймете, как создаётся гармоничный образ, формируется стиль и
-								расставляются акценты</p>
+							<p class="footer__text">Консультации в виде онлайн-встреч (всего 4)</p>
 						</li>
 						<li class="footer__item">
 							<span class="footer__marker"></span>
-							<p class="footer__text">Вы научитесь разбираться в косметике и создадите
-								больше десяти образов на любой случай
+							<p class="footer__text">Меню на 4 недели (на каждый день)
 							</p>
 						</li>
 						<li class="footer__item">
 							<span class="footer__marker"></span>
-							<p class="footer__text">Расширите область своих навыков и знаний, если ваша профессия лежит
-								в сфере косметических продуктов</p>
+							<p class="footer__text">Поддержка команды</p>
+						</li>
+						<li class="footer__item">
+							<span class="footer__marker"></span>
+							<p class="footer__text">Рецепты разгрузочных дней (после праздников и отпусков));</p>
+						</li>
+						<li class="footer__item">
+							<span class="footer__marker"></span>
+							<p class="footer__text">Примерное меню функционального питания на всю жизнь</p>
+						</li>
+						<li class="footer__item">
+							<span class="footer__marker"></span>
+							<p class="footer__text">Поддерживающий чат, после курса</p>
 						</li>
 					</ul>
 				</div>
@@ -251,13 +252,11 @@
 				</div>
 			</div>
 		</div>
-		
+
 		<!-- GOODS BLOCK ! IMPORTANT-->
-		<input type="hidden" name="item_number" id="{{item['code']}}"
-		class="items_quantity"
-		value=1 min=1 disabled data-price="{{item['price']}}"
-		data-old_price="{{item['old_price']}}" data-name="{{item['name']}}"
-		data-image="{{item['image']}}">
+		<input type="hidden" name="item_number" id="{{item['code']}}" class="items_quantity" value=1 min=1 disabled
+			data-price="{{item['price']}}" data-old_price="{{item['old_price']}}" data-name="{{item['name']}}"
+			data-image="{{item['image']}}">
 		<!-- GOODS BLOCK ! IMPORTANT-->
 
 		<!-- POLICY BLOCK -->
@@ -290,7 +289,8 @@
 					<input name="email" value="{{lead_email}}" type="email" placeholder="E-mail" required
 						class="form__field" id="userEmailFormRUR">
 
-					<button id="send_rur" class="form__btn template-btn noselect" type="button" onclick="addOrder('FormRUR')">
+					<button id="send_rur" class="form__btn template-btn noselect" type="button"
+						onclick="addOrder('FormRUR')">
 						<span>Оплатить</span>
 					</button>
 
@@ -319,7 +319,8 @@
 					<input name="email" value="{{lead_email}}" type="email" placeholder="E-mail" required
 						class="form__field" id="userEmailFormNTZ">
 
-					<button id="send_ntz" class="form__btn template-btn noselect" type="button" onclick="addOrder('FormNTZ')">
+					<button id="send_ntz" class="form__btn template-btn noselect" type="button"
+						onclick="addOrder('FormNTZ')">
 						<span>Оплатить</span>
 					</button>
 
